refactoring resource types names
