# giau/src/main/model/dtos.ts
@@ -12,29 +12,33 @@ export interface HasUUIDProp {
 
 export interface DeploymentPattern extends HasUUIDProp {
     name: string,
-    structure: PureNode
+    structure: DPNode
 }
 
 
-export interface PureNode {
+export interface DPNode {
     name: string,
-    nodeType: NodeType,
-    peers: PureNode[]
+    resourceType: ResourceType,
+    peers: DPNode[]
 }
 
-export interface PureVehicle extends PureNode {
-
-}
-
-export interface PureRSU extends PureNode {
+export interface DPCloudService extends DPNode {
 
 }
 
-export interface PureEdge extends PureNode {
+export interface DPEdgeService extends DPNode {
 
 }
 
-export interface PureCloud extends PureNode {
+export interface DPRSUResource extends DPNode {
+
+}
+
+export interface DPIoTResource extends DPNode {
+
+}
+
+export interface DPVehicleIoT extends DPIoTResource {
 
 }
 
@@ -103,11 +107,11 @@ export interface Node extends HasUUIDProp {
     application: EdgeProcessingApplication,
     blockchainArterfacts: BlockchainArtefact[],
     container: ContainerConfiguration,
-    nodeType: NodeType
+    resourceType: ResourceType
 }
 
-export enum NodeType {
-    cloud, edge, rsu, vehicle
+export enum ResourceType {
+    CLOUD_SERVICE = 0, EDGE_SERVICE = 1, RSU_RESOURCE = 2, VEHICLE_IOT = 3, IOT_RESOURCE = 4
 }
 
 
@@ -116,22 +120,25 @@ export interface NodeNetworkQualityAssociationClass {
     networkQuality: NetworkQuality
 }
 
-export interface Vehicle extends Node {
+export interface CloudService extends Node {
 
 }
 
-export interface RSU extends Node {
+export interface EdgeService extends Node {
 
 }
 
-export interface Edge extends Node {
+export interface RSUResource extends Node {
 
 }
 
-export interface Cloud extends Node {
+export interface IoTResource extends Node {
 
 }
 
+export interface VehicleIoT extends IoTResource {
+
+}
 
 /**
  * Experiments
