# giau/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "0.8.4",
+    "version": "0.9.0",
     "title": "GIAU (knowledGe for blockchaIn Applications and Utilties) API",
     "description": "A service to store experiments for the GIAU API"
   },
@@ -596,7 +596,7 @@
       "required": [
         "name",
         "container",
-        "nodeType",
+        "resourceType",
         "connections"
       ],
       "properties": {
@@ -624,7 +624,7 @@
             "$ref": "#/definitions/SoftwareArtefact"
           }
         },
-        "nodeType": {
+        "resourceType": {
           "type": "string",
           "description": "NodeType of the Node",
           "enum": [
@@ -714,7 +714,7 @@
     "PureNode": {
       "required": [
         "name",
-        "nodeType",
+        "resourceType",
         "peers"
       ],
       "properties": {
@@ -727,7 +727,7 @@
             "$ref": "#/definitions/PureNode"
           }
         },
-        "nodeType": {
+        "resourceType": {
           "type": "string",
           "description": "NodeType of the PureNode",
           "enum": [
