# utilities/results_parser/src/main/parser/benchmark_types.ts
@@ -34,7 +34,7 @@ export interface BFTopology {
 
 export interface BFNode {
     name: string,
-    nodeType: ResourceType,
+    resourceType: ResourceType,
     blockchainArtefact: BFBlockchainArtefact,
     hostMachine: BFHostMachine,
     connections: BFNodeNetworkQualityAssociationClass[],
